# deltabase

./: .gitignore  404.html  LICENSE  README.md  delta.py  example.py  index.html  makefile  mkdocs.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  dockerfile
checkout/: index.html
commit/: index.html
configure/: index.html
connect/: index.html
delete/: index.html
delta/: __init__.py
deltabase/: __init__.py  magic.py
deltabase/plugins/: __init__.py  base.py  bigquery.py  salesforce.py
deltadb/: __init__.py  delta.py  magic.py
docs/: checkout.md  commit.md  configure.md  connect.md  delete.md  errors.md  index.md  register.md  sql_context.md  upsert.md
docs/assets/css/: extra.css
docs/source/: conf.py  getting_started.rst  index.rst  modules.rst
docs/source/_static/: custom.css
errors/: index.html
examples/: magic.ipynb
register/: index.html
search/: search_index.json
sql_context/: index.html
tests/: conftest.py  delta_magic.ipynb  metric_comparision_avg.py  test_comparision.py  test_delta.py  test_delta_workflow.py  test_deltabase.py  test_deltabase_workflow.py  test_magic.ipynb
tests/logs/: compare.sqlite.01-01.txt  compare.sqlite.01-10.txt  compare.sqlite.02-02.txt  compare.sqlite.10-10.txt
upsert/: index.html
