[tool.poetry]
name = "deltabase"
version = "0.2.0"
description = ""
authors = ["uname-n <noreply@github.com>"]
readme = "README.md"
packages = [{include = "deltabase"}]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.5.0"
deltalake = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
sphinx = ">=5.0.0,<8.0.0"
sphinx-autodoc-typehints = "^2.2.3"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
