[tool.poetry]
name = "deltabase"
version = "0.4.0"
description = ""
authors = ["uname-n <noreply@github.com>"]
readme = "README.md"
packages = [{include = "deltabase"}]

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.5.0"
deltalake = "^0.19.0"

[tool.poetry.extras]
magic = ["ipython"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.31"
ipython = "^8.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
